# coverage

./: .gitignore  CMakeLists.txt  README.md  coverage.sh
include/: coverage.hpp  util.hpp  widget.h
src/: widget.cpp
test/: CMakeLists.txt  gcov_preload.cpp  gtest_main.cpp  test_coverage.cpp  test_death.cpp  test_util.cpp  test_widget.cpp
